# tyo-agentic-platform

./: .gitignore  CLAUDE.md  README.md
00-basic-agent/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
00-basic-agent/src/basic_agent/: __init__.py  agent.py  cli.py  config.py  github_client.py  logging.py  tools.py
00-basic-agent/src/basic_agent/accompany_docs/: agent.md  tools.md
00-basic-agent/tests/: conftest.py  test_agent.py  test_config.py  test_github_client.py  test_tools.py
01-rag-agent/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_log.txt
01-rag-agent/eval/: gold.yaml
01-rag-agent/github_repos_readmes/: carthage-architecture-center.md  gcp-pca-prep.md  machu-pichu.md  tyo-agentic-platform.md
01-rag-agent/src/rag_agent/: __init__.py  agent.py  cli.py  config.py  embeddings.py  evaluation.py  github_client.py  ingest.py  logging.py  retriever.py  tools.py  tracing.py  vector_store.py
01-rag-agent/src/rag_agent/accompany_docs/: 00-what-is-rag.md  01-embeddings.md  02-chunking.md  03-vector-database.md  04-ingestion.md  05-retrieval.md  06-metadata-filtering.md  07-agentic-rag.md  08-evaluating-retrieval.md  09-reranking.md  10-hybrid-search.md  11-production-readiness.md  README.md
01-rag-agent/tests/: test_agent.py  test_config.py  test_evaluation.py  test_github_client.py  test_hybrid_rerank.py  test_ingest.py  test_retriever.py  test_tools.py  test_tracing.py
02-orchestration-agent/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
02-orchestration-agent/eval/: gold.yaml
02-orchestration-agent/knowledge_base/: gobekli-tepe.md
02-orchestration-agent/src/orchestration_agent/: __init__.py  agent.py  cli.py  config.py  evaluation.py  github_client.py  knowledge_base.py  llm.py  logging.py  router.py  specialists.py  supervisor.py  tracing.py
02-orchestration-agent/src/orchestration_agent/accompany_docs/: 00-routing-vs-orchestration.md  01-specialist-agents.md  02-the-router.md  03-the-supervisor.md  04-evaluating-orchestration.md  README.md
02-orchestration-agent/tests/: test_agent.py  test_config.py  test_evaluation.py  test_github_client.py  test_knowledge_base.py  test_router.py  test_specialists.py  test_supervisor.py  test_tracing.py
