[project]
name = "rag-agent"
version = "0.1.0"
description = "An agentic RAG system that answers questions about GitHub repos from a Qdrant knowledge base and the live GitHub API."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Taha Youssef" }]
keywords = ["langchain", "rag", "qdrant", "embeddings", "nvidia", "agent"]

dependencies = [
    "langchain-core>=0.3.0",
    "langchain-nvidia-ai-endpoints>=0.3.0",
    "langchain-qdrant>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "qdrant-client>=1.12.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "structlog>=24.4.0",
    "typer>=0.12.0",
    "rich>=13.9.0",
]

[project.scripts]
rag-agent = "rag_agent.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_agent"]

# --------------------------------------------------------------------------- #
# Tooling
# --------------------------------------------------------------------------- #

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "PTH", "RUF",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = [
    "langchain_nvidia_ai_endpoints.*",
    "langchain_qdrant.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.coverage.run]
source = ["rag_agent"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
