[project]
name = "orchestration-agent"
version = "0.1.0"
description = "An orchestration agent that routes or supervises specialist agents (live GitHub, project docs, general chat)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Taha Youssef" }]
keywords = ["langchain", "langgraph", "orchestration", "router", "supervisor", "multi-agent", "nvidia"]

dependencies = [
    "langchain-core>=0.3.0",
    "langchain-nvidia-ai-endpoints>=0.3.0",
    "langgraph>=0.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "structlog>=24.4.0",
    "typer>=0.12.0",
    "rich>=13.9.0",
    "pyyaml>=6.0",
]

[project.scripts]
orchestration-agent = "orchestration_agent.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "respx>=0.21.1",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestration_agent"]

# --------------------------------------------------------------------------- #
# Tooling
# --------------------------------------------------------------------------- #

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "PTH", "RUF",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = [
    "langchain_nvidia_ai_endpoints.*",
    "langgraph.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.coverage.run]
source = ["orchestration_agent"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
